[package]
name = "mlv-screensaver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
screenshots = "*"
rodio = "*"
winapi = {version="*", features=["winuser"]}
serde = {version = "*", features = ["derive"]}
serde_json = "*"
ctrlc = "*"
crossterm = "*"
indoc = "2.0.5"
enigo = "*"

[[bin]]
name = "mlv-screensaver-experemental"
path = "src/main.rs"
